--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="application.js" charset="utf-8"></script>
+      <script src="library.js" charset="utf-8"></script>
   </body>
 </html>
