base structure html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="application.js" charset="utf-8"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
+  <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+</head>
+
+<body class="container">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="application.js" charset="utf-8"></script>
+
+  <section>
+    <div>
+      GYM NAME
+    </div>
+  </section>
+
+  <section class="trainer-box">
+    <div class="row">
+      <div class="column">
+        POKEBALLS
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+        <img src="images/pokeball.png" class="pokeball" onclick="()">
+      </div>
+      <div class="column">
+        TAUNT
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        POKEIMAGE
+      </div>
+      <div class="column">
+        TRAINERPIC
+      </div>
+    </div>
+  </section>
+
+  <section class="trainer-box">
+    <div class="row">
+      <div class="column">
+        POKEBALLS
+      </div>
+      <div class="column">
+        TAUNT
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        POKEIMAGE
+      </div>
+      <div class="column">
+        TRAINERPIC
+      </div>
+    </div>
+  </section>
+
+
+  <section class="trainer-box">
+    <div class="row">
+      <div class="column">
+        POKEBALLS
+      </div>
+      <div class="column">
+        TAUNT
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        POKEIMAGE
+      </div>
+      <div class="column">
+        TRAINERPIC
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      CONGRATS
+    </div>
+  </section>
+
+
+</body>
+
 </html>
