link to scripts

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body class="container">
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="application.js" charset="utf-8"></script>
+
 
   <section>
     <div>
@@ -89,7 +88,9 @@
     </div>
   </section>
 
-
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="application.js" charset="utf-8"></script>
+  <script src="library.js" charset="utf-8"></script>
 </body>
 
 </html>
