--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 </head>
 
 <body class="container">
-
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="application.js" charset="utf-8"></script>
 
   <section>
     <div>
       GYM NAME
     </div>
   </section>
+
+
+
+
 
   <section class="trainer-box">
     <div class="row">
@@ -32,14 +37,28 @@
       </div>
       <div class="column">
         <div class="tauntbox">
-            TAUNT
+          TAUNT
         </div>
 
       </div>
     </div>
     <div class="row">
       <div class="column">
-        POKEIMAGE
+
+        <div class="row pokestatsbox">
+          Pokestats
+          <h1 id="pokename"></h1>
+          <hr>
+          <p id="pokehp"></p>
+          <p id="pokeattack"></p>
+          <p id="pokedefense"></p>
+          <p id="pokemoves"></p>
+        </div>
+        <div class="row">
+          POKEIMAGE
+        </div>
+
+
       </div>
       <div class="column trainerpic">
         <img src="http://orig08.deviantart.net/232c/f/2012/051/9/3/936841bdb99b7a2a0ebed8efc2e7c3a0-d4qeg0k.png">
@@ -50,17 +69,18 @@
 
 
 
+
+
+
   <section class="trainer-box">
     <div class="row">
       <div class="column pokeballsbox">
-
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-
       </div>
       <div class="column">
         <div class="tauntbox">
@@ -78,6 +98,10 @@
       </div>
     </div>
   </section>
+
+
+
+
 
 
 
@@ -118,9 +142,7 @@
     </div>
   </section>
 
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="application.js" charset="utf-8"></script>
-  <script src="library.js" charset="utf-8"></script>
+
 </body>
 
 </html>
