linking html to js

--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
   </section>
 
 
-
-
-
-  <section class="trainer-box">
+  <section class="trainer-box" id="trainer1">
     <div class="row">
       <div class="column pokeballsbox">
 
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon1()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon2()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon3()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon4()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon5()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon6()">&nbsp;
 
       </div>
       <div class="column">
@@ -47,18 +44,16 @@
 
         <div class="row pokestatsbox">
           Pokestats
-          <h1 id="pokename"></h1>
+          <h1 id="pokename1"></h1>
           <hr>
-          <p id="pokehp"></p>
-          <p id="pokeattack"></p>
-          <p id="pokedefense"></p>
-          <p id="pokemoves"></p>
+          <p id="pokehp1"></p>
+          <p id="pokeattack1"></p>
+          <p id="pokedefense1"></p>
+          <p id="pokemoves1"></p>
         </div>
         <div class="row">
           POKEIMAGE
         </div>
-
-
       </div>
       <div class="column trainerpic">
         <img src="http://orig08.deviantart.net/232c/f/2012/051/9/3/936841bdb99b7a2a0ebed8efc2e7c3a0-d4qeg0k.png">
@@ -75,12 +70,12 @@
   <section class="trainer-box">
     <div class="row">
       <div class="column pokeballsbox">
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon1()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon2()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon3()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon4()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon5()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon6()">&nbsp;
       </div>
       <div class="column">
         <div class="tauntbox">
@@ -91,6 +86,15 @@
     </div>
     <div class="row">
       <div class="column">
+        <div class="row pokestatsbox">
+          Pokestats
+          <h1 id="pokename2"></h1>
+          <hr>
+          <p id="pokehp2"></p>
+          <p id="pokeattack2"></p>
+          <p id="pokedefense2"></p>
+          <p id="pokemoves2"></p>
+        </div>
         POKEIMAGE
       </div>
       <div class="column trainerpic">
@@ -127,6 +131,15 @@
     </div>
     <div class="row">
       <div class="column">
+        <div class="row pokestatsbox">
+          Pokestats
+          <h1 id="pokename3"></h1>
+          <hr>
+          <p id="pokehp3"></p>
+          <p id="pokeattack3"></p>
+          <p id="pokedefense3"></p>
+          <p id="pokemoves3"></p>
+        </div>
         POKEIMAGE
       </div>
       <div class="column trainerpic">
@@ -142,7 +155,8 @@
     </div>
   </section>
 
-
+<script src="application.js"></script>
+<script src="library.js"></script>
 </body>
 
 </html>
