--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Orgyrados</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
@@ -20,7 +20,8 @@
   </section>
 
 
-  <section class="trainer-box" id="trainer1">
+
+  <section class="trainer-box hidden" id="trainer1">
     <div class="row">
       <div class="column pokeballsbox">
 
@@ -64,38 +65,40 @@
 
 
 
-
-
-
-  <section class="trainer-box">
+  <section class="trainer-box hidden" id="trainer2">
     <div class="row">
       <div class="column pokeballsbox">
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon1()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon2()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon3()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon4()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon5()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon6()">&nbsp;
+
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPkmn1()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPkmn2()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPkmn3()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn4()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn5()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn6()">&nbsp;
+
       </div>
       <div class="column">
         <div class="tauntbox">
-            TAUNT
+          TAUNT
         </div>
 
       </div>
     </div>
     <div class="row">
       <div class="column">
+
         <div class="row pokestatsbox">
           Pokestats
-          <h1 id="pokename2"></h1>
+          <h1 id="pokename1"></h1>
           <hr>
-          <p id="pokehp2"></p>
-          <p id="pokeattack2"></p>
-          <p id="pokedefense2"></p>
-          <p id="pokemoves2"></p>
+          <p id="pokehp1"></p>
+          <p id="pokeattack1"></p>
+          <p id="pokedefense1"></p>
+          <p id="pokemoves1"></p>
         </div>
-        POKEIMAGE
+        <div class="row">
+          POKEIMAGE
+        </div>
       </div>
       <div class="column trainerpic">
         <img src="https://assets.vg247.com/current/2016/10/pkmn_red.png">
@@ -108,45 +111,48 @@
 
 
 
-
-
-  <section class="trainer-box">
+  <section class="trainer-box hidden" id="trainer3">
     <div class="row">
       <div class="column pokeballsbox">
 
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon1()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon2()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon3()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon4()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon5()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="karlPokemon6()">&nbsp;
 
       </div>
       <div class="column">
         <div class="tauntbox">
-            TAUNT
+          TAUNT
         </div>
 
       </div>
     </div>
     <div class="row">
       <div class="column">
+
         <div class="row pokestatsbox">
           Pokestats
-          <h1 id="pokename3"></h1>
+          <h1 id="pokename1"></h1>
           <hr>
-          <p id="pokehp3"></p>
-          <p id="pokeattack3"></p>
-          <p id="pokedefense3"></p>
-          <p id="pokemoves3"></p>
+          <p id="pokehp1"></p>
+          <p id="pokeattack1"></p>
+          <p id="pokedefense1"></p>
+          <p id="pokemoves1"></p>
         </div>
-        POKEIMAGE
+        <div class="row">
+          POKEIMAGE
+        </div>
       </div>
       <div class="column trainerpic">
         <img src="http://img02.deviantart.net/42a4/i/2015/257/d/e/pokemon_oc_lizzie_other_look_by_miyuki_tsukiyono-d991a2i.png">
       </div>
     </div>
   </section>
+
+
 
 
   <section>
