--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox1">
           TAUNT
-          <p id='tauntArea'><p>
+          <p id='tauntArea1'><p>
         </div>
 
       </div>
@@ -81,8 +81,9 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox2">
           TAUNT
+                    <p id='tauntArea2'><p>
         </div>
 
       </div>
@@ -127,8 +128,9 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox3">
           TAUNT
+                    <p id='tauntArea3'><p>
         </div>
 
       </div>
