--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Orgyrados</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
 </head>
 
@@ -36,7 +37,7 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox1">
+        <div class="tauntbox">
           TAUNT
           <p id='tauntArea1'><p>
         </div>
@@ -47,7 +48,7 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          Pokestats
+
           <h1 id="pokename0"></h1>
           <hr>
           <p id="pokehp0"></p>
@@ -81,7 +82,7 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox2">
+        <div class="tauntbox">
           TAUNT
                     <p id='tauntArea2'><p>
         </div>
@@ -92,7 +93,6 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          Pokestats
           <h1 id="pokename1"></h1>
           <hr>
           <p id="pokehp1"></p>
@@ -128,7 +128,7 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox3">
+        <div class="tauntbox">
           TAUNT
                     <p id='tauntArea3'><p>
         </div>
