karl changes css / html

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <title>Orgyrados</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
 </head>
 
 <body class="container">
-<button onclick="typeTrainerText()">Click me</button>
+
+
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="application.js" charset="utf-8"></script>
-    <script src="typewriter.js" charset="utf-8"></script>
+  <script src="typewriter.js" charset="utf-8"></script>
 
   <section>
     <div>
-      GYM NAME
+<img src="/images/gyrados-banner.png">
     </div>
   </section>
 
@@ -38,8 +38,8 @@
       </div>
       <div class="column">
         <div class="tauntbox">
-          TAUNT
-          <p id='tauntArea1'><p>
+          <p id='tauntArea1'>
+            <p>
         </div>
 
       </div>
@@ -56,12 +56,12 @@
           <p id="pokedefense0"></p>
           <p id="pokemoves0"></p>
         </div>
-        <div class="row">
-          POKEIMAGE
+        <div class="row pokeimgbox">
+          <img src="" id="karlpokePic">
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="http://orig08.deviantart.net/232c/f/2012/051/9/3/936841bdb99b7a2a0ebed8efc2e7c3a0-d4qeg0k.png">
+        <img src="/images/karl.png">
       </div>
     </div>
   </section>
@@ -83,8 +83,8 @@
       </div>
       <div class="column">
         <div class="tauntbox">
-          TAUNT
-                    <p id='tauntArea2'><p>
+          <p id='tauntArea2'>
+            <p>
         </div>
 
       </div>
@@ -100,12 +100,12 @@
           <p id="pokedefense1"></p>
           <p id="pokemoves1"></p>
         </div>
-        <div class="row">
-          POKEIMAGE
+        <div class="row pokeimgbox">
+          <img src="" id="brianpokePic">
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="https://assets.vg247.com/current/2016/10/pkmn_red.png">
+        <img src="/images/brian.png">
       </div>
     </div>
   </section>
@@ -129,8 +129,8 @@
       </div>
       <div class="column">
         <div class="tauntbox">
-          TAUNT
-                    <p id='tauntArea3'><p>
+          <p id='tauntArea3'>
+            <p>
         </div>
 
       </div>
@@ -139,7 +139,7 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          Pokestats
+
           <h1 id="pokename2"></h1>
           <hr>
           <p id="pokehp2"></p>
@@ -147,12 +147,12 @@
           <p id="pokedefense2"></p>
           <p id="pokemoves2"></p>
         </div>
-        <div class="row">
-          POKEIMAGE
+        <div class="row pokeimgbox">
+          <img src="" id="stefpokePic">
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="http://img02.deviantart.net/42a4/i/2015/257/d/e/pokemon_oc_lizzie_other_look_by_miyuki_tsukiyono-d991a2i.png">
+        <img src="/images/stef.png">
       </div>
     </div>
   </section>
@@ -166,8 +166,8 @@
     </div>
   </section>
 
-<script src="application.js"></script>
-<script src="library.js"></script>
+  <script src="application.js"></script>
+  <script src="library.js"></script>
 </body>
 
 </html>
