--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section>
     <div>
-<img src="/images/gyrados-banner.png">
+<img src="images/gyrados-banner.png">
     </div>
   </section>
 
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="/images/karl.png">
+        <img src="images/karl.png">
       </div>
     </div>
   </section>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="/images/brian.png">
+        <img src="images/brian.png">
       </div>
     </div>
   </section>
@@ -152,7 +152,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="/images/stef.png">
+        <img src="images/stef.png">
       </div>
     </div>
   </section>
