--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <script src="typewriter.js" charset="utf-8"></script>
 
   <section>
-    <div>
-<img src="images/gyrados-banner.png">
+    <div class="banner container">
+      <h1>POKEMON GYM ORGYRADOS
     </div>
   </section>
 
@@ -34,7 +34,6 @@
         <img src="images/pokeball.png" class="pokeball" onclick="kPkmn4()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="kPkmn5()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="kPkmn6()">&nbsp;
-
       </div>
       <div class="column">
         <div class="tauntbox">
