--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="row pokestatsbox">
 
-          <h1 id="pokename0"></h1>
+          <h1 id="pokename0">???</h1>
           <hr>
           <p id="pokehp0"></p>
           <p id="pokeattack0"></p>
@@ -92,7 +92,7 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          <h1 id="pokename1"></h1>
+          <h1 id="pokename1">???</h1>
           <hr>
           <p id="pokehp1"></p>
           <p id="pokeattack1"></p>
@@ -139,7 +139,7 @@
 
         <div class="row pokestatsbox">
 
-          <h1 id="pokename2"></h1>
+          <h1 id="pokename2">???</h1>
           <hr>
           <p id="pokehp2"></p>
           <p id="pokeattack2"></p>
