--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Orgyrados</title>
+  <title>Sea Peoples</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Original+Surfer|Tillana|Trade+Winds" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
 </head>
-
+<video autoplay muted loop id="bgVid">
+  <source src="16mb.mp4" type="video/mp4">
+</video>
 <body class="container">
 
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="typewriter.js" charset="utf-8"></script>
 
   <section>
     <div class="banner container">
-      <h1>POKEMON GYM ORGYRADOS
+      <h1>SEA PEOPLES POKEMON GYM
     </div>
   </section>
 
