--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <video autoplay muted loop id="bgVid">
   <source src="16mb.mp4" type="video/mp4">
 </video>
+      <audio id="audio" src="splash.mp4"></audio>
 <body class="container">
 
 
