--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <div class="row">
       <div class="column pokeballsbox">
 
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn1()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn2()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn3()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn4()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn5()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn6()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(0)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(1)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(2)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(3)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(4)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="kPkmn(5)">&nbsp;
       </div>
       <div class="column">
         <div class="tauntbox">
@@ -76,12 +76,12 @@
     <div class="row">
       <div class="column pokeballsbox">
 
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn1()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn2()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn3()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn4()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn5()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn6()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(0)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(1)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(2)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(3)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(4)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="bPkmn(5)">&nbsp;
 
       </div>
       <div class="column">
@@ -122,12 +122,12 @@
     <div class="row">
       <div class="column pokeballsbox">
 
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn1()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn2()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn3()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn4()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn5()">&nbsp;
-        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn6()">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(0)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(1)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(2)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(3)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(4)">&nbsp;
+        <img src="images/pokeball.png" class="pokeball" onclick="sPkmn(5)">&nbsp;
 
       </div>
       <div class="column">
