so many styling changes :

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <script src="typewriter.js" charset="utf-8"></script>
 
   <section>
-    <div class="banner container">
-      <h1>POKEMON GYM ORGYRADOS
+    <div class="bannerbefore container" id="enter">
+      <h1 class="titlename">POKEMON GYM ORGYRADOS</h1>
+      <button class="bannerbutton" id="enterButton" onclick="enterGym()">BATTLE</button>
     </div>
   </section>
 
@@ -35,10 +36,12 @@
         <img src="images/pokeball.png" class="pokeball" onclick="kPkmn5()">&nbsp;
         <img src="images/pokeball.png" class="pokeball" onclick="kPkmn6()">&nbsp;
       </div>
+      <hr>
       <div class="column">
         <div class="tauntbox">
+          <h1>KARL</h1>
           <p id='tauntArea1'>
-            <p>
+          </p>
         </div>
 
       </div>
@@ -48,12 +51,11 @@
 
         <div class="row pokestatsbox">
 
-          <h1 id="pokename0">???</h1>
-          <hr>
-          <p id="pokehp0"></p>
-          <p id="pokeattack0"></p>
-          <p id="pokedefense0"></p>
-          <p id="pokemoves0"></p>
+          <div class="aa"><h1 id="pokename0">??????</h1></div>
+          <div class="bb"><p id="pokehp0"></p></div>
+          <div class="cc"><p id="pokeattack0"></p></div>
+          <div class="dd"><p id="pokedefense0"></p></div>
+          <div class="ee"><p id="pokemoves0"></p></div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="karlpokePic">
@@ -82,8 +84,9 @@
       </div>
       <div class="column">
         <div class="tauntbox">
+          <h1>BRIAN</h1>
           <p id='tauntArea2'>
-            <p>
+          </p>
         </div>
 
       </div>
@@ -92,12 +95,11 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          <h1 id="pokename1">???</h1>
-          <hr>
-          <p id="pokehp1"></p>
-          <p id="pokeattack1"></p>
-          <p id="pokedefense1"></p>
-          <p id="pokemoves1"></p>
+          <div class="aa"><h1 id="pokename1">??????</h1></div>
+          <div class="bb"><p id="pokehp1"></p></div>
+          <div class="cc"><p id="pokeattack1"></p></div>
+          <div class="dd"><p id="pokedefense1"></p></div>
+          <div class="ee"><p id="pokemoves1"></p></div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="brianpokePic">
@@ -128,8 +130,9 @@
       </div>
       <div class="column">
         <div class="tauntbox">
+          <h1>STEF</h1>
           <p id='tauntArea3'>
-            <p>
+          </p>
         </div>
 
       </div>
@@ -138,13 +141,11 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-
-          <h1 id="pokename2">???</h1>
-          <hr>
-          <p id="pokehp2"></p>
-          <p id="pokeattack2"></p>
-          <p id="pokedefense2"></p>
-          <p id="pokemoves2"></p>
+          <div class="aa"><h1 id="pokename2">??????</h1></div>
+          <div class="bb"><p id="pokehp2"></p></div>
+          <div class="cc"><p id="pokeattack2"></p></div>
+          <div class="dd"><p id="pokedefense2"></p></div>
+          <div class="ee"><p id="pokemoves2"></p></div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="stefpokePic">
@@ -167,6 +168,7 @@
 
   <script src="application.js"></script>
   <script src="library.js"></script>
+  <script src="banner.js"></script>
 </body>
 
 </html>
