--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Orgyrados</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
 </head>
 
