--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <video autoplay muted loop id="bgVid">
   <source src="16mb.mp4" type="video/mp4">
 </video>
-      <audio id="audio" src="splash.mp4"></audio>
+<audio id="audio" src="splash.mp4"></audio>
+<audio id="audio1" src="bell.mp4"></audio>
+<audio id="audio2" src="seagull.mp4"></audio>
+<audio id="audio3" src="waves.mp4"></audio>
 <body class="container">
 
 
