have to re add banner.js

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
   <script src="application.js"></script>
   <script src="library.js"></script>
+  <script src="banner.js"></script>
 </body>
 
 </html>
