gym name change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section>
 
     <div class="bannerbefore container" id="enter">
-      <h1 class="titlename">SEA PEOPLES GYM</h1>
+      <h1 class="titlename">TRADE WINDS GYM</h1>
       <button class="bannerbutton" id="enterButton" onclick="enterGym()">BATTLE</button>
 
     </div>
