--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 <video autoplay muted loop id="bgVid">
   <source src="16mb.mp4" type="video/mp4">
