trainers now slide in

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+<link rel="stylesheet"
+ href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link href="main.css" rel="stylesheet">
 </head>
 <video autoplay muted loop id="bgVid">
@@ -71,7 +73,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="images/karl.png">
+        <img src="images/karl.png" id="karlpic" class="hidden">
       </div>
     </div>
   </section>
@@ -115,7 +117,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="images/brian.png">
+        <img src="images/brian.png" id="brianpic" class="hidden">
       </div>
     </div>
   </section>
@@ -161,7 +163,7 @@
         </div>
       </div>
       <div class="column trainerpic">
-        <img src="images/stef.png">
+        <img src="images/stef.png" id="stefpic" class="hidden">
       </div>
     </div>
   </section>
