lots of animation added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Sea Peoples</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Original+Surfer|Tillana|Trade+Winds" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
   <link href="https://unpkg.com/lemoncss/dist/lemon.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-<link rel="stylesheet"
- href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link href="main.css" rel="stylesheet">
 </head>
 <video autoplay muted loop id="bgVid">
@@ -20,6 +19,7 @@
 <audio id="audio1" src="bell.mp4"></audio>
 <audio id="audio2" src="seagull.mp4"></audio>
 <audio id="audio3" src="waves.mp4"></audio>
+
 <body class="container">
 
 
@@ -49,7 +49,7 @@
       </div>
       <hr>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox hidden" id="taunt1">
           <h1>KARL</h1>
           <p id='tauntArea1'>
           </p>
@@ -62,11 +62,20 @@
 
         <div class="row pokestatsbox">
 
-          <div class="aa"><h1 id="pokename0">??????</h1></div>
-          <div class="bb"><p id="pokehp0"></p></div>
-          <div class="cc"><p id="pokeattack0"></p></div>
-          <div class="dd"><p id="pokedefense0"></p></div>
-          <div class="ee"><p id="pokemoves0"></p></div>
+          <div class="aa">
+            <h1 id="pokename0">??????</h1></div>
+          <div class="bb">
+            <p id="pokehp0"></p>
+          </div>
+          <div class="cc">
+            <p id="pokeattack0"></p>
+          </div>
+          <div class="dd">
+            <p id="pokedefense0"></p>
+          </div>
+          <div class="ee">
+            <p id="pokemoves0"></p>
+          </div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="karlpokePic">
@@ -94,7 +103,7 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox hidden" id="taunt2">
           <h1>BRIAN</h1>
           <p id='tauntArea2'>
           </p>
@@ -106,11 +115,20 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          <div class="aa"><h1 id="pokename1">??????</h1></div>
-          <div class="bb"><p id="pokehp1"></p></div>
-          <div class="cc"><p id="pokeattack1"></p></div>
-          <div class="dd"><p id="pokedefense1"></p></div>
-          <div class="ee"><p id="pokemoves1"></p></div>
+          <div class="aa">
+            <h1 id="pokename1">??????</h1></div>
+          <div class="bb">
+            <p id="pokehp1"></p>
+          </div>
+          <div class="cc">
+            <p id="pokeattack1"></p>
+          </div>
+          <div class="dd">
+            <p id="pokedefense1"></p>
+          </div>
+          <div class="ee">
+            <p id="pokemoves1"></p>
+          </div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="brianpokePic">
@@ -140,7 +158,7 @@
 
       </div>
       <div class="column">
-        <div class="tauntbox">
+        <div class="tauntbox hidden" id="taunt3">
           <h1>STEF</h1>
           <p id='tauntArea3'>
           </p>
@@ -152,11 +170,20 @@
       <div class="column">
 
         <div class="row pokestatsbox">
-          <div class="aa"><h1 id="pokename2">??????</h1></div>
-          <div class="bb"><p id="pokehp2"></p></div>
-          <div class="cc"><p id="pokeattack2"></p></div>
-          <div class="dd"><p id="pokedefense2"></p></div>
-          <div class="ee"><p id="pokemoves2"></p></div>
+          <div class="aa">
+            <h1 id="pokename2">??????</h1></div>
+          <div class="bb">
+            <p id="pokehp2"></p>
+          </div>
+          <div class="cc">
+            <p id="pokeattack2"></p>
+          </div>
+          <div class="dd">
+            <p id="pokedefense2"></p>
+          </div>
+          <div class="ee">
+            <p id="pokemoves2"></p>
+          </div>
         </div>
         <div class="row pokeimgbox">
           <img src="" id="stefpokePic">
