--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sea Peoples</title>
+  <title>TRADE WINDS GYM</title>
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Original+Surfer|Tillana|Trade+Winds" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i" rel="stylesheet">
