walking trainer suprisingly works

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 
 <body class="container">
+  <section class="experiment">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="trainer" src="https://78.media.tumblr.com/088786d466c3a315d6043b8e59d96770/tumblr_msu2ojWkqz1scncwdo1_500.gif">
+  </section>
+
 
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
